--- a/eai_client/src/app/equipment/equipment.component.html
+++ b/eai_client/src/app/equipment/equipment.component.html
@@ -467,23 +467,23 @@
               </div>
               <div class="col-md-2 offset-md-2 full">
                 <div class="form-group">
-                  <label for="inputTypeCableCommande" class="form-control-label">Type câble commande</label>
-                  <input formControlName="typeCableCommande" type="text" class="form-control" id="inputTypeCableCommande">
-                </div>
+                  <label for="inputLongueurCable" class="form-control-label">Longueur de câble</label>
+                  <input formControlName="longueurCable" type="number" class="form-control" id="inputLongueurCable">
+              </div>
               </div>
               <div class="col-md-1">
               </div>
             </div>
   
-        <div class="row semi-section">
+        <!-- <div class="row semi-section">
             <div class="col-md-2 offset-md-5 full">
               <div class="form-group">
                   <label for="inputLongueurCable" class="form-control-label">Longueur de câble</label>
                   <input formControlName="longueurCable" type="number" class="form-control" id="inputLongueurCable">
-                </div>
+              </div>
             </div>
             <div class="col-md-5"></div>
-          </div>
+          </div> -->
         </form>
   
   
