--- a/eai_client/src/app/manage-groups/manage-groups.component.html
+++ b/eai_client/src/app/manage-groups/manage-groups.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <h3>#ManageGroups</h3>
+  <h3>Manage Groups</h3>
   <hr />
+  <br>
   <div class="row">
     <div class="col-md-6">
       <form [formGroup]="formAddGroup" class="section-container" >
