--- a/eai_client/src/app/project-list/project-list.component.html
+++ b/eai_client/src/app/project-list/project-list.component.html
@@ -1,8 +1,10 @@
 <div *ngIf="!toggleEquipList" class="container">
     <div>
-    <h3>#ProjectsList</h3>
+    <h2>Projects List</h2>
     <br>
-    <table class="table table-hover">
+    <br>
+    <br>
+    <table class="table table-hover table-striped">
         <thead>
             <tr>
             <th style="text-align: center">#</th>
