--- a/eai_client/src/app/bilans/wiring-power/wiring-power.component.html
+++ b/eai_client/src/app/bilans/wiring-power/wiring-power.component.html
@@ -1,12 +1,14 @@
 <div class="container">
   <h2>Wiring Power Bilan</h2>
   <hr>
+  <br>
+  <button type="button" class="btn btn-primary" (click)="goToEquipList()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back To Equipments List</button>        
   <div class="space"></div>
-  <table class="table">
+  <table class="table table-striped table-hover">
       <thead class="thead-default">
         <tr>
           <th>Power Cable</th>
-          <th>Number</th>
+           <th>Number</th>
           <th>Quantity (m)</th>
         </tr>
       </thead>
