--- a/eai_client/src/app/bilans/wiring-protection/wiring-protection.component.html
+++ b/eai_client/src/app/bilans/wiring-protection/wiring-protection.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <h2>Wiring Protection Bilan</h2>
   <hr>
+  <br>
+  <button type="button" class="btn btn-primary" (click)="goToEquipList()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back To Equipments List</button>      
   <div class="space"></div>
-  <table class="table">
+  <table class="table table-striped table-hover">
       <thead class="thead-default">
         <tr>
           <th>Instrumentation Cable</th>
