--- a/eai_client/src/app/equipments-list/equipments-list.component.html
+++ b/eai_client/src/app/equipments-list/equipments-list.component.html
@@ -1,10 +1,17 @@
 <div class="container">
-  <h3>#{{ projectName }}</h3>
+  <h3>Project : #{{ projectName }}</h3>
+  <hr>
   <br>
-  <table class="table table-hover">
-      <thead>
+  <button type="button" class="btn btn-primary" (click)="goToPjList()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back to Projects List</button>
+  <button type="succcess" class="btn btn-primary" (click)="goToCreateEquip()"> <i class="fa fa-plus" aria-hidden="true"></i> Create Equipment</button>
+  <button type="button" class="btn btn-primary" (click)="goToManageGroups()"><i class="fa fa-cogs" aria-hidden="true"></i> Manage Groups</button>
+  <br>
+  <br>
+  <br>
+  <table class="table table-hover table-striped">
+      <thead lass="thead-dark">
           <tr>
-          <th></th>
+          <th>#</th>
           <th>IDT</th>
           <th>Owner</th>
           <th>Decription</th>
@@ -19,7 +26,5 @@
           </tr>
       </tbody>
   </table>
-  <button type="button" class="btn btn-primary" (click)="goToPjList()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back to Lists</button>
-  <button type="succcess" class="btn btn-primary" (click)="goToCreateEquip()"> <i class="fa fa-plus" aria-hidden="true"></i> Create Equipment</button>
-  <button type="button" class="btn btn-primary" (click)="goToManageGroups()"><i class="fa fa-cogs" aria-hidden="true"></i> Manage Groups</button>
+
 </div>
